all other changes for w4d2

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,9 @@
 <header>
     <h1>Finstagram</h1>
+    <br>
+    <br>
+    <br>
+    <h3><a href="/signup">🌊_🐟_🌊_🦈_🐠_🌊_🐟_🐡_🌊__🐠_🌊_Create An Account</a></h5>
 </header>
 <main role="main">
   <% @finstagram_posts.each do |finstagram_post| %>
