--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,700italic,700,300">
     <link rel="stylesheet" type="text/css" href="/stylesheets/lib.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/app.css">
-    <title>Finstagram</title>
+    <title>Finstagram Web App</title>
   </head>
   <body>
     <%= yield %>
