--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,9 +1,14 @@
 <header>
-    <h1>Finstagram</h1>
-    <br>
-    <br>
-    <br>
-    <h3><a href="/signup">🌊_🐟_🌊_🦈_🐠_🌊_🐟_🐡_🌊__🐠_🌊_Create An Account</a></h5>
+  <h1>Finstagram</h1>
+  <div class="login-info">
+    <% if current_user %>
+      <%= current_user.username %>
+      <a href="/logout">Logout</a>
+    <% else %>
+      <a href="/login">Login</a>
+      <a href="/signup">Signup</a>
+    <% end %>
+  </div>
 </header>
 <main role="main">
   <% @finstagram_posts.each do |finstagram_post| %>
