--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,7 +1,5 @@
 <header>
-    <h1>Finstagram Signup</h1>
-    <br>
-    <h2><a href="/">_______________________Back To 🎣Finstagram🦈</a></h2>
+    <h2>🐟  Join 🐟🐠🐡🦈 Finstagram!</h2>
 </header>
 
 <ul class="errors">
