--- a/app/views/shared/finstagram_post.erb
+++ b/app/views/shared/finstagram_post.erb
@@ -1,6 +1,8 @@
 <article class="finstagram-post">
     <div class="user-info">
-        <img src="<%= finstagram_post.user.avatar_url %>" alt="<%= finstagram_post.user.username %>">
+        <a href="/<%= finstagram_post.user.username %>"
+            <img src="<%= finstagram_post.user.avatar_url %>" alt="<%= finstagram_post.user.username %>">
+        </a>
         <h2><%= finstagram_post.user.username %></h2>
         <h3><%= finstagram_post.humanized_time_ago %></h3>
     </div>
