--- a/app/views/shared/finstagram_post.erb
+++ b/app/views/shared/finstagram_post.erb
@@ -1,6 +1,6 @@
 <article class="finstagram-post">
     <div class="user-info">
-        <a href="/<%= finstagram_post.user.username %>">
+        <a href="/profile">
             <img src="<%= finstagram_post.user.avatar_url %>" alt="<%= finstagram_post.user.username %>">
         </a>
         <h2><%= finstagram_post.user.username %></h2>
