--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,7 +14,10 @@
       </h1>
       <div class="login-info">
         <% if current_user %>
-          <%= current_user.username %>
+          <a href="/profile">
+            <img src="<%= current_user.avatar_url %>" alt="<%= current_user.username %>" width=25px height=25px>
+            <%= current_user.username %>
+          </a>
           <a href="/logout">Logout</a>
         <% else %>
           <a href="/login">Login</a>
